# Gegtoo-A-Simple-Version-Control-System-in-C

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gegtoo.c
driver/: sha1tester.c
include/: commands.h  core.h
include/core/: binary.h  commit_graph.h  fs.h  head_tree.h  index.h  object.h  refs.h  tree.h
include/utils/: kahn.h  lca.h  lexer.h  myers_diff.h  sha1.h
resources/: RFC3174-SHA1.md  resources.md
src/: main.c
src/commands/: add.c  branch.c  cat.c  checkout.c  commit.c  diff.c  init.c  log.c  merge.c  remove.c  status.c  tags.c
src/core/: binary.c  commit_graph.c  core.c  fs.c  head_tree.c  index.c  object.c  refs.c  tree.c
src/utils/: huffman.c  huffman.h  kahn.c  lca.c  lexer.c  myers_diff.c  sha1.c  sha1.h
test_codes/: huffmantester.c
tests/: huffmantester.c
